--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.2.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
+    "jwt-check-expiration": "^1.0.5",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
